# restorinator

./: LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: pytest.yaml
src/restorinator/: __init__.py  cli.py  restorinator.py
tests/: dummy_aws_credentials  test_restore.py
tests/s3/foo-aurora3-2024-06-26-060001/: export_info_foo-aurora3-2024-06-26-060001.json  export_tables_info_foo-aurora3-2024-06-26-060001_from_1_to_1.json
tests/s3/foo-aurora3-2024-06-26-060001/snake_db/snake_db.snakes/1/: part-00000-6a2ea23e-359e-37d7-95b6-3be2d3d49e88-c000.gz.parquet
